--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nattiya Kanhabua"
-  avatar           : "profile.jpeg"
-  bio              : "Highly skilled data scientist with more than 10 years of research experience in information retrieval, recommender system, machine learning and natural language processing, and 5+ years of industrial experience in developing large-scale web applications and marketplace optimization. I am passionate about search and recommendation, data analytics, user behavior studies, explainability, interpretability, and ethics of AI systems."
+  name             : "SCG, Thailand"
+  avatar           : "profile.jpg"
+  bio              : 
   location         : "Thailand"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/nattiya/"
+  linkedin         : "nattiya"
   #orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
