Test the title of main page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Talks"
     url: /talks/    
 
-  - title: "Volunteer"
-    url: /volunteer/    
+  - title: "Activities"
+    url: /activities/    
     
   - title: "Short CV"
     url: /cv/
