--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "SCG Cement–Building Materials Co.,Ltd."
+  name             : "SCG CBM Co.,Ltd."
   avatar           : "profile.jpg"
   bio              : 
   location         : "Thailand"
