--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "<a href="https://www.scgbuildingmaterials.com/">SCG CBM Co.,Ltd.</a>"
+  name             : "SCG CBM"
   avatar           : "profile.jpg"
   bio              : 
   location         : "Thailand"
