--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "SCG CBM"
-  avatar           : "profile.jpg"
+  avatar           : "nattiya.jpg"
   bio              : 
   location         : "Thailand"
   employer         :
