--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,17 @@ main:
   - title: "Projects"
     url: /projects/
 
-  - title: "Publications"
-    url: /publications/
-
   - title: "Talks"
     url: /talks/    
 
   - title: "Activities"
     url: /activities/    
-    
+  
+  - title: "Publications"
+    url: /publications/
+
+  - title: "Skills"
+    url: /skills/
+
   - title: "Short CV"
     url: /cv/
